--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         compatibilitycheck: null,
         backgroundColor: "#222C36",
         splashStyle: "Dark",
-        dataUrl: "https://w8.snokido.com/games/unity-webgl/cluster-rush/Release/NG.data",
-        codeUrl: "https://w8.snokido.com/games/unity-webgl/cluster-rush/Release/NG.js",
-        asmUrl: "https://w8.snokido.com/games/unity-webgl/cluster-rush/Release/NG.asm.js",
-        memUrl: "https://w8.snokido.com/games/unity-webgl/cluster-rush/Release/NG.mem",
+        dataUrl: "https://raw.githubusercontent.com/PucksRevenge27/ClusterRush.Html/main/Release/NG.data",
+        codeUrl: "https://raw.githubusercontent.com/PucksRevenge27/ClusterRush.Html/main/Release/NG.js",
+        asmUrl: "https://raw.githubusercontent.com/PucksRevenge27/ClusterRush.Html/main/Release/NG.asm.js",
+        memUrl: "https://raw.githubusercontent.com/PucksRevenge27/ClusterRush.Html/main/Release/NG.mem",
       };
     </script>
     <script src="https://raw.githubusercontent.com/PucksRevenge27/ClusterRush.Html/main/Release/UnityLoader.js"></script>
